[package]
name = 'game'
description = 'My LD47 game entry'
# license = '...' # mit?
version = '0.1.0'
authors = ['Anton Bulakh <self@necauqua.dev>']
edition = '2018'

[profile.release]
lto = true

[lib]
crate-type = ['cdylib']

[dependencies]
log = '0.4'
wasm-logger = '0.2'

noise = '0.6'

wasm-bindgen = '0.2'
js-sys = '0.3'

[dependencies.web-sys]
version = '=0.3.35' # exactly .35 because here IDE still works (drastically speeding up my development)
features = [
    'console',
    'Document',
    'Window',
    'Element',
    'Node',
    'Event',
    'MouseEvent',
    'KeyboardEvent',
    'EventTarget',
    'HtmlElement',
    'AudioContext',
    'AudioBuffer',
    'AudioNode',
    'AudioDestinationNode',
    'AudioBufferSourceNode',
    'HtmlImageElement',
    'HtmlAudioElement',
    'HtmlMediaElement',
    'HtmlCanvasElement',
    'CanvasRenderingContext2d',
]
